<resources>
    <string name="app_name">Just Pizza</string>
    <string name="quantity">Количество</string>
    <string name="addButtonText">Добави</string>
    <string name="OverallSumViewText">Общо: </string>
    <string name="extras">Добавки</string>
    <string name="Mushrooms">Гъби</string>
    <string name="Corn">Царевица</string>
    <string name="Pickles">Кисели краставици</string>

    <string name="order_summary_mushrooms">С гъби: </string>
    <string name="order_summary_corn">С царевица: </string>
    <string name="order_summary_pickles">С кисели краставички: </string>
    <string name="order_summary_quantity">Брой: </string>
    <string name="order_summary_price">Общо: </string>
    <string name="back"><![CDATA[<]]></string>
    <string name="order">Поръчай</string>
    <string name="chooseDate">Изберете дата</string>
    <string name="chooseTime">Изберете час</string>
    <string name="cart">Cart</string>
    <string name="pizza">Pizza</string>

    <string-array name="cities_array">
        <item>Благоевград</item>
        <item>Бургас</item>
        <item>Варна</item>
        <item>Велико Търново</item>
        <item>Видин</item>
        <item>Враца</item>
        <item>Габрово</item>
        <item>Добрич</item>
        <item>Кърджали</item>
        <item>Кюстендил</item>
        <item>Ловеч</item>
        <item>Монтана</item>
        <item>Пазарджик</item>
        <item>Перник</item>
        <item>Плевен</item>
        <item>Пловдив</item>
        <item>Разград</item>
        <item>Русе</item>
        <item>Силистра</item>
        <item>Сливен</item>
        <item>Смолян</item>
        <item>София-град</item>
        <item>София-област</item>
        <item>Стара Загора</item>
        <item>Търговище</item>
        <item>Хасково</item>
        <item>Шумен</item>
        <item>Ямбол</item>
    </string-array>


</resources>