<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PizzaExtrasFragment">


        <Button
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pizza_name_extras_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <CheckBox
            android:id="@+id/pizza_with_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/extras"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pizza_name_extras_view" />

        <RadioGroup
            android:id="@+id/additives_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pizza_with_add">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extras" />

            <CheckBox
                android:id="@+id/mushrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mushrooms" />

            <CheckBox
                android:id="@+id/corn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Corn" />

            <CheckBox
                android:id="@+id/pickles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pickles" />

        </RadioGroup>

        <TextView
            android:id="@+id/quantity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/quantity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/additives_group" />

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="-"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity_header" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@+id/decrement_button"
            app:layout_constraintTop_toBottomOf="@+id/quantity_header" />

        <Button
            android:id="@+id/increment_button"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="+"
            app:layout_constraintLeft_toRightOf="@+id/quantity_text_view"
            app:layout_constraintTop_toBottomOf="@+id/quantity_header" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/increment_button" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:text="@string/addButtonText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/price_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>